@@ -2,8 +2,6 @@ Things to do on the panel, in no particular order:
 
 1.2/1.4 items
 
-* When recheck all TryExec each time a menu is shown, or perhaps in background.
-
 [ Hmmmm ... needs some thought ]
 * RootApplication dentry type support.  These would be items to run other apps
   as root.  This would require pam support of course.  So for things like
