@@ -142,7 +142,7 @@ applet_callback_callback(GtkWidget *widget, gpointer data)
 			menu_properties(menu->info->data);
 		else if(strcmp(menu->name,"edit_menus")==0) {
 			char *tmp;
-			if((tmp = gnome_is_program_in_path("gmenu")))  {
+			if((tmp = panel_is_program_in_path("gmenu")))  {
 				gnome_execute_async(NULL, 1, &tmp);
 				g_free(tmp);
 			}
