@@ -75,7 +75,7 @@ get_real_menu_path(const char *arguments)
 	else
 		this_menu = gnome_unconditional_datadir_file (arguments);
 
-	if (!g_file_exists (this_menu)) {
+	if (!panel_file_exists (this_menu)) {
 		g_warning("menu %s does not exist "
 			  "(arguments are %s)",
 			  this_menu, arguments);
@@ -123,7 +123,7 @@ got_gmenu (void)
 	if (checked)
 		return got_it;
 
-	tmp = gnome_is_program_in_path ("gmenu");
+	tmp = panel_is_program_in_path ("gmenu");
 	if (tmp != NULL)
 		got_it = TRUE;
 	else
@@ -288,7 +288,7 @@ properties_apply_callback (Menu *menu)
 
 		if (menu->custom_icon &&
 		    menu->custom_icon_file != NULL &&
-		    g_file_exists (menu->custom_icon_file))
+		    panel_file_exists (menu->custom_icon_file))
 			pixmap_name = g_strdup (menu->custom_icon_file);
 		else
 			pixmap_name = get_pixmap(this_menu, (strcmp (menu->path, ".") == 0));
